exports[`List should not render the toolbar without toolbar props 1`] = `
<div
  className="tc-list">
  <table
    className="table tc-list-display-table">
    <thead>
      <tr>
        <th>
          Id
        </th>
        <th>
          Name
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className=""
        id={undefined}>
        <td>
          1
        </td>
        <td>
          Hello world
        </td>
      </tr>
      <tr
        className=""
        id={undefined}>
        <td>
          2
        </td>
        <td>
          Foo
        </td>
      </tr>
      <tr
        className=""
        id={undefined}>
        <td>
          3
        </td>
        <td>
          Bar
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`List should render 1`] = `
<div
  className="tc-list">
  <div>
    <div
      className="navbar navbar-default"
      role="toolbar">
      <div
        className="container-fluid">
        <ul
          className="nav navbar-nav"
          role={null}>
          <label
            active={undefined}
            activeHref={undefined}
            activeKey={undefined}
            className="navbar-text"
            htmlFor={undefined}
            onSelect={null}>
            Display:
          </label>
          <li
            className="dropdown"
            style={undefined}>
            <a
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle"
              href=""
              id={42}
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button">
              <i
                aria-hidden="true"
                className="fa fa-bars"
                title={null} />
               
              <span
                className="caret" />
            </a>
            <ul
              aria-labelledby={42}
              className="dropdown-menu"
              role="menu">
              <li
                className=""
                role="presentation"
                style={undefined}>
                <a
                  href=""
                  id={undefined}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1">
                  <i
                    aria-hidden="true"
                    className="fa fa-bars"
                    title={null} />
                   
                  Table
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}>
                <a
                  href=""
                  id={undefined}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1">
                  <i
                    aria-hidden="true"
                    className="fa fa-list-alt"
                    title={null} />
                   
                  Expanded
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}>
                <a
                  href=""
                  id={undefined}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1">
                  <i
                    aria-hidden="true"
                    className="fa fa-th-large"
                    title={null} />
                   
                  Tile
                </a>
              </li>
            </ul>
          </li>
        </ul>
        <ul
          className="nav navbar-nav"
          role={null}>
          <label
            active={undefined}
            activeHref={undefined}
            activeKey={undefined}
            className="navbar-text"
            htmlFor={undefined}
            onSelect={null}>
            Sort by:
          </label>
          <li
            className="dropdown"
            style={undefined}>
            <a
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle"
              href=""
              id={42}
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button">
              Name
               
              <span
                className="caret" />
            </a>
            <ul
              aria-labelledby={42}
              className="dropdown-menu"
              role="menu">
              <li
                className=""
                role="presentation"
                style={undefined}>
                <a
                  href=""
                  id={undefined}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1">
                  Id
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}>
                <a
                  href=""
                  id={undefined}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1">
                  Name
                </a>
              </li>
            </ul>
          </li>
          <button
            activeHref={undefined}
            activeKey={undefined}
            className="navbar-btn btn btn btn-link"
            disabled={false}
            id={undefined}
            onClick={[Function]}
            onSelect={null}
            role="button"
            type="button">
            ASCENDING
          </button>
        </ul>
        <form
          className="navbar-form navbar-right"
          onSubmit={[Function]}
          role="search">
          <div
            className="form-group">
            <input
              aria-label="Filter"
              className="form-control"
              id={undefined}
              onChange={[Function]}
              placeholder="Filter"
              type="search" />
            <button
              className="btn btn-link"
              disabled={false}
              id={undefined}
              title="Filter"
              type="submit">
              <svg
                aria-hidden="true"
                className="tc-svg-icon"
                title={null}>
                <use
                  xlinkHref="#talend-search" />
              </svg>
              <span
                className="sr-only">
                Filter
              </span>
            </button>
          </div>
        </form>
        <ul
          className="nav navbar-nav"
          role={null}>
          <label
            active={undefined}
            activeHref={undefined}
            activeKey={undefined}
            className="navbar-text"
            htmlFor={undefined}
            onSelect={null}>
            Show:
          </label>
          <li
            className="dropdown"
            style={undefined}>
            <a
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle"
              href=""
              id={42}
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button">
              5
               
              <span
                className="caret" />
            </a>
            <ul
              aria-labelledby={42}
              className="dropdown-menu"
              role="menu">
              <li
                className=""
                role="presentation"
                style={undefined}>
                <a
                  href=""
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1">
                  5
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}>
                <a
                  href=""
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1">
                  10
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}>
                <a
                  href=""
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1">
                  20
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}>
                <a
                  href=""
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1">
                  50
                </a>
              </li>
            </ul>
          </li>
          <div
            active={undefined}
            activeHref={undefined}
            activeKey={undefined}
            className="navbar-btn btn-group"
            onSelect={null}>
            <button
              className="btn btn-link"
              disabled={false}
              id={undefined}
              onClick={[Function]}
              type="button">
              <i
                aria-hidden="true"
                className="fa fa-backward"
                title={null} />
            </button>
            <button
              className="btn btn-link tc-pagination-ctrl-prev btn btn-link tc-pagination-ctrl-prev-default"
              disabled={false}
              id={undefined}
              onClick={[Function]}
              type="button">
              <i
                aria-hidden="true"
                className="fa fa-play"
                title={null} />
            </button>
            <span
              className="btn btn-link">
              6
              /
              2
            </span>
            <button
              className="btn btn-link"
              disabled={false}
              id={undefined}
              onClick={[Function]}
              type="button">
              <i
                aria-hidden="true"
                className="fa fa-play"
                title={null} />
            </button>
            <button
              className="btn btn-link"
              disabled={false}
              id={undefined}
              onClick={[Function]}
              type="button">
              <i
                aria-hidden="true"
                className="fa fa-forward"
                title={null} />
            </button>
          </div>
        </ul>
      </div>
    </div>
  </div>
  <table
    className="table tc-list-display-table">
    <thead>
      <tr>
        <th>
          Id
        </th>
        <th>
          Name
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className=""
        id={undefined}>
        <td>
          1
        </td>
        <td>
          Hello world
        </td>
      </tr>
      <tr
        className=""
        id={undefined}>
        <td>
          2
        </td>
        <td>
          Foo
        </td>
      </tr>
      <tr
        className=""
        id={undefined}>
        <td>
          3
        </td>
        <td>
          Bar
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`List should render id if provided 1`] = `
<div
  className="tc-list">
  <div>
    <div
      className="navbar navbar-default"
      role="toolbar">
      <div
        className="container-fluid">
        <ul
          className="nav navbar-nav"
          role={null}>
          <label
            active={undefined}
            activeHref={undefined}
            activeKey={undefined}
            className="navbar-text"
            htmlFor="context-display-mode"
            onSelect={null}>
            Display:
          </label>
          <li
            className="dropdown"
            style={undefined}>
            <a
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle"
              href=""
              id="context-display-mode"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button">
              <i
                aria-hidden="true"
                className="fa fa-bars"
                title={null} />
               
              <span
                className="caret" />
            </a>
            <ul
              aria-labelledby="context-display-mode"
              className="dropdown-menu"
              role="menu">
              <li
                className=""
                role="presentation"
                style={undefined}>
                <a
                  href=""
                  id="context-display-mode-table"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1">
                  <i
                    aria-hidden="true"
                    className="fa fa-bars"
                    title={null} />
                   
                  Table
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}>
                <a
                  href=""
                  id="context-display-mode-large"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1">
                  <i
                    aria-hidden="true"
                    className="fa fa-list-alt"
                    title={null} />
                   
                  Expanded
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}>
                <a
                  href=""
                  id="context-display-mode-tile"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1">
                  <i
                    aria-hidden="true"
                    className="fa fa-th-large"
                    title={null} />
                   
                  Tile
                </a>
              </li>
            </ul>
          </li>
        </ul>
        <ul
          className="nav navbar-nav"
          role={null}>
          <label
            active={undefined}
            activeHref={undefined}
            activeKey={undefined}
            className="navbar-text"
            htmlFor="context-sort-by"
            onSelect={null}>
            Sort by:
          </label>
          <li
            className="dropdown"
            style={undefined}>
            <a
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle"
              href=""
              id="context-sort-by"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button">
              Name
               
              <span
                className="caret" />
            </a>
            <ul
              aria-labelledby="context-sort-by"
              className="dropdown-menu"
              role="menu">
              <li
                className=""
                role="presentation"
                style={undefined}>
                <a
                  href=""
                  id="context-sort-by-item-Id"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1">
                  Id
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}>
                <a
                  href=""
                  id="context-sort-by-item-Name"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1">
                  Name
                </a>
              </li>
            </ul>
          </li>
          <button
            activeHref={undefined}
            activeKey={undefined}
            className="navbar-btn btn btn btn-link"
            disabled={false}
            id="context-sort-order"
            onClick={[Function]}
            onSelect={null}
            role="button"
            type="button">
            ASCENDING
          </button>
        </ul>
        <form
          className="navbar-form navbar-right"
          onSubmit={[Function]}
          role="search">
          <div
            className="form-group">
            <input
              aria-label="Filter"
              className="form-control"
              id="context-filter-input"
              onChange={[Function]}
              placeholder="Filter"
              type="search" />
            <button
              className="btn btn-link"
              disabled={false}
              id="context-filter-submit"
              title="Filter"
              type="submit">
              <svg
                aria-hidden="true"
                className="tc-svg-icon"
                title={null}>
                <use
                  xlinkHref="#talend-search" />
              </svg>
              <span
                className="sr-only">
                Filter
              </span>
            </button>
          </div>
        </form>
        <ul
          className="nav navbar-nav"
          role={null}>
          <label
            active={undefined}
            activeHref={undefined}
            activeKey={undefined}
            className="navbar-text"
            htmlFor="context-pagination-size"
            onSelect={null}>
            Show:
          </label>
          <li
            className="dropdown"
            style={undefined}>
            <a
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle"
              href=""
              id="context-pagination-size"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button">
              5
               
              <span
                className="caret" />
            </a>
            <ul
              aria-labelledby="context-pagination-size"
              className="dropdown-menu"
              role="menu">
              <li
                className=""
                role="presentation"
                style={undefined}>
                <a
                  href=""
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1">
                  5
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}>
                <a
                  href=""
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1">
                  10
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}>
                <a
                  href=""
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1">
                  20
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}>
                <a
                  href=""
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1">
                  50
                </a>
              </li>
            </ul>
          </li>
          <div
            active={undefined}
            activeHref={undefined}
            activeKey={undefined}
            className="navbar-btn btn-group"
            onSelect={null}>
            <button
              className="btn btn-link"
              disabled={false}
              id="context-nav-to-first"
              onClick={[Function]}
              type="button">
              <i
                aria-hidden="true"
                className="fa fa-backward"
                title={null} />
            </button>
            <button
              className="btn btn-link tc-pagination-ctrl-prev btn btn-link tc-pagination-ctrl-prev-default"
              disabled={false}
              id="context-nav-to-prev"
              onClick={[Function]}
              type="button">
              <i
                aria-hidden="true"
                className="fa fa-play"
                title={null} />
            </button>
            <span
              className="btn btn-link">
              6
              /
              2
            </span>
            <button
              className="btn btn-link"
              disabled={false}
              id="context-nav-to-next"
              onClick={[Function]}
              type="button">
              <i
                aria-hidden="true"
                className="fa fa-play"
                title={null} />
            </button>
            <button
              className="btn btn-link"
              disabled={false}
              id="context-nav-to-last"
              onClick={[Function]}
              type="button">
              <i
                aria-hidden="true"
                className="fa fa-forward"
                title={null} />
            </button>
          </div>
        </ul>
      </div>
    </div>
  </div>
  <table
    className="table tc-list-display-table">
    <thead>
      <tr>
        <th>
          Id
        </th>
        <th>
          Name
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className=""
        id="context-0">
        <td>
          1
        </td>
        <td>
          Hello world
        </td>
      </tr>
      <tr
        className=""
        id="context-1">
        <td>
          2
        </td>
        <td>
          Foo
        </td>
      </tr>
      <tr
        className=""
        id="context-2">
        <td>
          3
        </td>
        <td>
          Bar
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
